# OmegaSource

./: .travis.yml  CMakeLists.txt
dep/: CMakeLists.txt
dep/lualib/: CMakeLists.txt
dep/lualib/compatibility/: CMakeLists.txt
dep/lualib/lua/: CMakeLists.txt
dep/lualib/lua/lua51/: CMakeLists.txt
dep/lualib/lua/lua52/: CMakeLists.txt
dep/lualib/lua/lua53/: CMakeLists.txt
dep/lualib/luajit/: CMakeLists.txt
src/common/: CMakeLists.txt
src/server/database/Database/: Field.h
src/server/database/Database/Implementation/: CharacterDatabase.cpp
src/server/game/: CMakeLists.txt
src/server/game/Accounts/: RBAC.h
src/server/game/Anticheat/: AnticheatMgr.cpp
src/server/game/Chat/: Chat.cpp  Hyperlinks.cpp
src/server/game/Entities/Creature/: Creature.cpp
src/server/game/Entities/GameObject/: GameObject.cpp
src/server/game/Entities/Object/: Object.cpp  Object.h
src/server/game/Entities/Player/: Player.cpp  Player.h
src/server/game/Entities/Unit/: StatSystem.cpp  Unit.cpp
src/server/game/Globals/: ObjectMgr.cpp
src/server/game/Handlers/: CharacterHandler.cpp  ChatHandler.cpp  MiscHandler.cpp  NPCHandler.cpp  SpellHandler.cpp
src/server/game/Loot/: Loot.h  LootMgr.cpp  LootMgr.h
src/server/game/Maps/: Map.cpp
src/server/game/Scripting/: ScriptMgr.cpp  ScriptMgr.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp
src/server/game/Spells/: SpellEffects.cpp
src/server/game/Spells/Auras/: SpellAuraEffects.cpp
src/server/game/Warden/: Warden.h
src/server/game/World/: World.cpp  World.h
src/server/scripts/Commands/: cs_lookup.cpp
src/server/scripts/Custom/: custom_script_loader.cpp  worldchat.cpp
src/server/shared/DataStores/: DBCEnums.h  DBCStructure.h
src/server/worldserver/: worldserver.conf.dist
